--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-picker": "^5.3.1",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "expo-camera": "~13.2.1",
+    "expo-media-library": "~15.2.3",
+    "react-native-maps": "1.3.2",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
