--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.15",
+    "expo-camera": "~13.2.1",
     "expo-image-picker": "~14.1.1",
+    "expo-location": "~15.1.1",
+    "expo-media-library": "~15.2.3",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "expo-camera": "~13.2.1",
-    "expo-media-library": "~15.2.3",
-    "react-native-maps": "1.3.2",
-    "expo-location": "~15.1.1"
+    "react-redux": "^8.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
